--- a/style.css
+++ b/style.css
@@ -9,9 +9,10 @@ body{
     font-family: 'Roboto', sans-serif;
     background:url("images/bg.png");
     background-repeat: no-repeat;
-    background-position: center center;
+    /* background-position: center center; */
     background-attachment: scroll;
     background-size: cover;
+    /* width: 100%; */
 }
 
 nav{
@@ -114,40 +115,12 @@ nav ul li a:hover, a.active{
     border: none;
     color: #fff;
     font-weight: 500;
-    background-color:  #3352F2;
+    background-image: linear-gradient(#3152f9,#1a2871);
+    cursor: pointer;
 }
 .amount{
     display: flex;
-    justify-content: space-between;
-}
-.plus-button {
-    background: #3352f2;
-    color: white;
-    padding: 0px 21px;
-    margin-bottom: -3px;
-    border-radius: 4px;
-    cursor: pointer;
-}
-.plus-button:hover{
-    background-color: #F3F5FF;
-    color: #3352f2;
-    border: 1px solid #3352f2;
-    padding: 0px 20px;
-}
-.minus-button {
-    background: #3252f2;
-    padding: 0px 24px;
-    color: white;
-    font-weight: 800;
-    border-radius: 4px;
-    cursor: pointer;
-}
-.minus-button:hover{
-    background-color:#F3F5FF;
-    color: #3252f2;
-    border: 1px solid #3352f2;
-    padding: 0px 23px;
-}
+    justify-content: space-between;}
 .center-input {
     margin-top: 10px!important;
     margin-bottom: 10px!important;
@@ -158,3 +131,67 @@ nav ul li a:hover, a.active{
     margin-bottom: 60px!important;
     margin-top: 30px!important;
 }
+.minus-button{
+    padding: 0px 24px;
+    color:#ffffff;
+    font-weight: 800;
+    border-radius: 4px;
+    cursor: pointer;
+    background-image: linear-gradient(#3152f9,#1a2871);
+}
+.plus-button {
+    background-image: linear-gradient(#3152f9,#1a2871);
+    color: white;
+    padding: 0px 22px;
+    margin-bottom: -3px;
+    border-radius: 4px;
+    cursor: pointer;
+}
+/* #flight-booking-form{
+    display: none;
+} */
+#processing-Tickets{
+    background-color: #fdfdfd8c;
+    width: 900px;
+    height: 500px;
+    margin: 32px auto;
+    border-radius: 10px;
+    display: none;
+}
+.processing{
+    text-align: center;
+    color: #3252f2;
+    padding-top: 135px;
+    font-size: 30px;
+}
+#ticket-summary {
+    text-align: center;
+    font-size: 26px;
+    margin-top: 85px;
+    color: white;
+}
+#Second-Section-btn {
+    align-self: center;
+    padding: 20px 30px;
+    font-size: 54px;
+    font-weight: 700;
+    border-radius: 5px;
+    border: none;
+    background-image: linear-gradient(#3252f28a,#3252f2);
+    color: white;
+    margin: 70px 379px;
+}
+#last-content{
+    display: inline;
+    position: absolute;
+    margin: -451px 154px;
+    padding: 40px 216px;
+    font-size: 55px;
+    text-align: center;
+    color: #3252f2;
+    display: none;
+}
+/* #last-section{
+    
+} */
+
