--- a/style.css
+++ b/style.css
@@ -9,10 +9,8 @@ body{
     font-family: 'Roboto', sans-serif;
     background:url("images/bg.png");
     background-repeat: no-repeat;
-    /* background-position: center center; */
     background-attachment: scroll;
     background-size: cover;
-    /* width: 100%; */
 }
 
 nav{
@@ -147,22 +145,19 @@ nav ul li a:hover, a.active{
     border-radius: 4px;
     cursor: pointer;
 }
-/* #flight-booking-form{
-    display: none;
-} */
 #processing-Tickets{
     background-color: #fdfdfd8c;
     width: 900px;
     height: 500px;
     margin: 32px auto;
     border-radius: 10px;
-    display: none;
+    display: none;/* have to make display none this line */
 }
 .processing{
     text-align: center;
     color: #3252f2;
-    padding-top: 135px;
-    font-size: 30px;
+    padding-top: 113px;
+    font-size: 35px;
 }
 #ticket-summary {
     text-align: center;
@@ -177,21 +172,49 @@ nav ul li a:hover, a.active{
     font-weight: 700;
     border-radius: 5px;
     border: none;
-    background-image: linear-gradient(#3252f28a,#3252f2);
+    background-image: linear-gradient(#3152f9,#1a2871);
     color: white;
     margin: 70px 379px;
 }
 #last-content{
     display: inline;
     position: absolute;
-    margin: -451px 154px;
+    margin: -444px 154px;
     padding: 40px 216px;
     font-size: 55px;
     text-align: center;
     color: #3252f2;
     display: none;
 }
-/* #last-section{
-    
-} */
+/* #flight-booking-form{
+    display: none;} */
 
+#Error-content{
+     /* padding: 40px 216px; */
+    font-size: 55px;
+    text-align: center;
+    background-color: #fdfdfd8c;
+    width: 900px;
+    height: 500px;
+    margin: 32px auto;
+    border-radius: 10px;
+    display: none;
+}
+#Error-content h1 {
+    color: #b90000;
+    padding-top: 120px;
+}
+#Error-content h4 {
+    font-size: 35px;
+}
+#Error-Button {
+    background-image: linear-gradient(#bf0505,#520000);
+    color: white;
+    padding: 10px 20px;
+    font-size: 35px;
+    font-weight: 700;
+    border: none;
+    border-radius: 5px;
+    margin-top: 34px;
+    cursor: pointer;
+}
